@@ -32,7 +32,7 @@ readRangePorStream <- function(file,range)
 readVarPorStream <- function(pstream,start){
   variable <- list()
   variable$width <- readIntPorStream(pstream)
-  variable$name <- tolower(readStringPorStream(pstream))
+  variable$name <- readStringPorStream(pstream)
   #print(variable$name)
   #cat("\nVariable ",variable$name," width: ",variable$width)
   variable$printformat <- c(readIntPorStream(pstream), readIntPorStream(pstream), readIntPorStream(pstream))
@@ -102,7 +102,7 @@ readLabPorStream <- function(pstream,types){
   nvar <- readIntPorStream(pstream)
   vars <- character(0)
   for(i in 1:nvar)
-    vars <- c(vars,tolower(readStringPorStream(pstream)))
+    vars <- c(vars,readStringPorStream(pstream))
   #cat("\nVariables: ",paste(vars,collapse=" "))
   nlabs <- readIntPorStream(pstream)
   #cat("\nNumber of labels:",nlabs)
